--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [settings]
 debug = true
 secret_key = animal-center-secret
-log_path = requests.log
+log_file = requests.log
 python_version = 3
 
 [db]
